double parens typo modify final section plan

--- a/sigma.tex
+++ b/sigma.tex
@@ -57,7 +57,7 @@ For $C$ a coalgebra over a field $k$ expressed as a colimit $C = \colim_k C_k$ o
 \end{corollary}
 
 This covariant algebraic model for formal schemes is very useful.  For instance, this equivalence makes the following calculation trivial:
-\begin{lemma}[{(cf.\ \Cref{HF2BOIsSymAlg}, \Cref{DivConstructionsAreFree}, and \Cref{ECohomBUIsFree})}]
+\begin{lemma}[{cf.\ \Cref{HF2BOIsSymAlg}, \Cref{DivConstructionsAreFree}, and \Cref{ECohomBUIsFree}}]
 Select a coalgebra $C$ over a field $k$ together with a pointing $k \to C$.  Write $M$ for the coideal $M = C / k$.  The free formal monoid on the pointed formal scheme $\Sch k \to \Sch C$ is given by \[F(\Sch k \to \Sch C) = \Sch \Sym^* M.\]  Writing $\Delta c = \sum_j \ell_j \otimes r_j$ for the diagonal on $C$, the diagonal on $\Sym^* C$ is given by \[ \Delta(c_1 \cdots c_n) = \sum_{j_1, \ldots, j_n} (\ell_{1,j_1} \cdots \ell_{n, j_n}) \otimes (r_{1, j_1} \cdots r_{n, j_n}). \qed\]
 \end{lemma}
 
@@ -731,6 +731,8 @@ This is a direct consequence of the $5$--lemma.
 
 \section{Unstable additive cooperations for \texorpdfstring{$kU$}{kU}}
 
+\todo{In the AHR appendix, we briefly use the rational version of this problem.  It belongs here, and we may as well do it, since it's quick and easy.}
+
 Write $H = H\F_p$.  Today we will study the effect of the map $\hat \Pi_3$ in ordinary homology.  Many parts of the proof we explored for $E$--theory break.  Topologically, the Serre spectral sequence for $H^* BU[6, \infty)$ is not even-concentrated and so is not forced to collapse.  Algebraically, because $\G_a$ is not $p$--divisible the behavior of the model exact sequence is also suspect.  Because the situation has fewer insulating good properties, we are forced to actually consider it carefully.  The upside, however, is that the standard group law on $\G_a$ is simple enough that we can compute the problem to death.
 
 We begin with the topological half of our tasks.  The Serre spectral sequence \[E_2^{*, *} = H\F_p^* BSU \otimes H\F_p^* \OS{H\Z}{3} \Rightarrow H\F_p^* BU[6, \infty)\] is quite accessible, and we will recount the case of $p = 2$.  In this case, the spectral sequence has $E_2$--page \[E_2^{*, *} = H\F_2^* BSU \otimes H\F_2^* \OS{H\Z}{3} \cong \F_2[c_2, c_3, \ldots] \otimes \F_2\left[\Sq^I \iota_3 \middle| \begin{array}{c} I_j \ge 2I_{j+1}, \\ 2 I_1 - I_+ \end{array}\right].\] \todo{$2 I_1 - I_+$ doesn't look like a condition.  Also, what is $I_+$?  Somehow this should mean that you start with $\Sq^2$ not $\Sq^1$.}  Because the target is $6$--connective, we must have the transgressive differential $d_4 \iota_3 = c_2$, which via the Kudo transgression theorem spurs the much larger family of differentials \[d_{4+I_+} \Sq^I \iota_3 = \Sq^I c_2.\]  This necessitates understanding the action of the Steenrod operations on the cohomology of $BSU$, which is due to Wu\citeme{Wu formulas, maybe May's concise book}:\todo{Can these formulas be read off from the divisorial calculation?  Maybe not, since it's easy to read off the Milnor primitives but harder to see the Steenrod squares.} \[\Sq^{2^j} \cdots \Sq^4 \Sq^2 c_2 = c_{1 + 2^j}.\]  Accounting for the squares of classes left behind, this culminates in the following calculation:\todo{This spectral sequence can be drawn in using Hood's package.}
@@ -835,8 +837,6 @@ This follows much along the lines of \Cref{HopfRingForEBP}.  We check that the s
 \begin{remark}
 Our analysis in \Cref{LEFTCooperations} gives us full access to the Hopf ring structure of the \emph{nonconnective} cooperations $H\F_p{}_* \OS{KU}{2*}$.  Using a variety of techniques, Morton and Strickland calculated the Hopf ring structure of $H\F_2{}_* \OS{K}{2*}$ where $K$ ranges among the nonconnective objects $KO$, $KU$, $KSp$, and the less common ``$KT$'', which is self--conjugated $K$--theory~\cite{Morton,MortonStrickland,StricklandBottPeriodicity}.\todo{This could be expanded some, as not all these references are relevant to what's written.}
 \end{remark}
-
-\todo{In the AHR appendix, we briefly use the rational version of this problem.  It belongs here, and we may as well do it, since it's quick and easy.}
 
 
 
@@ -1089,18 +1089,6 @@ This is exactly Witten's formula for his genus, as applied to complex manifolds 
 
 
 
-\section{Odd-primary real bordism orientations}
-
-\begin{center}
-\textbf{\Large This is under construction.}
-\end{center}
-
-\todo[inline]{A different approach to this is to work through the $p \ne 2$ case, since you can totally, correctly work it out and see the $\Sigma$--structure relation get imposed. That's kind of attractive.  Too bad you had this thought after the class was complete.  ------  We might also try to understand the extension problem of orientations across $MU \to MSO$ for spectra which are local away from $2$.  It seems like some juggling of the complex-conjugation idempotents could give you access to $BSO$ information in terms of $BU$, which would be satisfying.  Compare with Neil's response at \texttt{http://mathoverflow.net/questions/123958/a-formal-group-law-over-oriented-bordism}. Hood also points out that the usual ``$\operatorname{tanh}^{-1}$'' equation for the $L$--genus has an expansion in terms of the usual logarithm: it's an averaging between the positive and negative logarithmic series.}
-
-\todo[inline]{Hood also points out that the mysterious series $x / (1 - e^{-x})$ occurs as $\exp_{\G_a} / \exp_{\G_m}$.  Also, Section 3 of Ando--Hopkins--Rezk sets up a bunch of the rational Hirzebruch genera stuff in a way that extends to $MO\<8\>$.}
-
-
-
 
 
 
@@ -1109,6 +1097,8 @@ This is exactly Witten's formula for his genus, as applied to complex manifolds 
 \begin{center}
 \textbf{\Large This is under construction.  The stuff here is correct, but it didn't turn into a super coherent lecture, and I have an idea for something better to say.}
 \end{center}
+
+\todo[inline]{A different approach to this is to work through the $p \ne 2$ case, since you can totally, correctly work it out and see the $\Sigma$--structure relation get imposed. That's kind of attractive.  Too bad you had this thought after the class was complete.  Maybe \emph{start} this section with the odd-primary case.  ------  We might also try to understand the extension problem of orientations across $MU \to MSO$ for spectra which are local away from $2$.  It seems like some juggling of the complex-conjugation idempotents could give you access to $BSO$ information in terms of $BU$, which would be satisfying.  Compare with Neil's response at \texttt{http://mathoverflow.net/questions/123958/a-formal-group-law-over-oriented-bordism}. Hood also points out that the usual ``$\operatorname{tanh}^{-1}$'' equation for the $L$--genus has an expansion in terms of the usual logarithm: it's an averaging between the positive and negative logarithmic series.  Hood also points out that the mysterious series $x / (1 - e^{-x})$ occurs as $\exp_{\G_a} / \exp_{\G_m}$.  Also, Section 3 of Ando--Hopkins--Rezk sets up a bunch of the rational Hirzebruch genera stuff in a way that extends to $MO\<8\>$\ldots which I guess now appears in Appendix A.1.}
 
 In the previous Lecture, we proved that elliptic spectra receive canonical $MU[6, \infty)$--orientations, that complex elliptic spectra collectively give rise to a genus valued in modular forms, and that the $q$--expansions of these modular forms are integral.  However, the original \Cref{OchanineWittenTheorem} of Ochanine and Witten claimed to describe a genus on $\Spin$-- and $\String$--manifolds, which we have only managed to approximate with our study of $MU[6, \infty)$--orientations.  Our last goal for this Case Study is to show that the chromatic formal schemes associated to spaces like $B\String$ are somewhat accessible, and so chromatically-amenable elliptic spectra receive canonical $M\String$--orientations.
 
