note about lazy align* environment usage

--- a/main.tex
+++ b/main.tex
@@ -56,6 +56,7 @@
 \todo[inline]{Encourage spectral sequence figures to occur on facing pages.}
 \todo[inline]{Clark's use of MinionPro font is really nice.  Generally, we should make an effort to pick a nice font.  http://web.willbenton.com/writing/2008/better-latex has more info about converting FF fonts for use in LaTeX, including Minion.}
 \todo[inline]{Use booktabs (http://www.ctan.org/tex-archive/macros/latex/contrib/booktabs/) to typeset any tables appearing in this book.  (I don't think there are very many.)}
+\todo[inline]{In several places you abuse the \texttt{align*} environment to put references into a right-hand column.  Is there a less hack-y way to do this?}
 
 
 
