--- a/quillen.tex
+++ b/quillen.tex
@@ -9,7 +9,7 @@ Having totally dissected unoriented bordism, we can now turn our attention to ot
 There is a map of infinite--loopspaces \[J_{\C}\co BU \to B \GL_1 \S\] called the \textit{complex $J$--homomorphism}.
 \end{theorem}
 
-\begin{definition}[{cf.\ \Cref{DefnOfMO}}]
+\begin{definition}[{cf.\ \Cref{DefnOfMO}}]\label{DefnComplexOrientation}
 The associated Thom spectrum is written ``$MU$'' and called \textit{complex bordism}.  A map $MU \to E$ of ring spectra is said to be a \textit{complex orientation of $E$}.
 \todo{Something I've seen more than once is an equivalence $MU(k) \simeq BU(k) / BU(k-1)$. It's not immediately obvious to me where this comes from. Where does it come from? Is it helpful to think about?}
 \end{definition}
