comb through section 5.4

--- a/finite.tex
+++ b/finite.tex
@@ -634,8 +634,8 @@ The results of this section have several alternative forms in the literature.  F
 \todo{The end of this remark could be beefed up by mentioning some of the stuff around Question 100 in the $E$--theory seminar notes.}
 \end{remark}
 
-\begin{remark}
-\todo{Maybe add a reference to the Hazewinkel book section on Artin--Haase exponentials.}
+\begin{remark}\label{ArtinHasseExponential}
+\todo{Maybe add a reference to the Hazewinkel book section on Artin--Hasse exponentials.}
 The $p$--typification operation often gives ``unusual'' results.  For instance, we will examine the standard multiplicative formal group law of \Cref{GmAndItsLogExample}, its rational logarithm, and its rational exponential:
 \begin{align*}
 x +_{\G_m^{\mathrm{std}}} y & = x + y - xy, &
