smooth out Section 5.5

--- a/main.bib
+++ b/main.bib
@@ -306,6 +306,20 @@ MRREVIEWER = {Willi Meier},
        URL = {http://dx.doi.org/10.1016/0040-9383(79)90018-1},
 }
 
+@book {Breen,
+    AUTHOR = {Breen, Lawrence},
+     TITLE = {Fonctions th\^eta et th\'eor\`eme du cube},
+    SERIES = {Lecture Notes in Mathematics},
+    VOLUME = {980},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {1983},
+     PAGES = {xiii+115},
+      ISBN = {3-540-12002-5},
+   MRCLASS = {14K25},
+  MRNUMBER = {823233},
+MRREVIEWER = {N. Yui},
+}
+
 @book {BMMS,
     AUTHOR = {Bruner, R. R. and May, J. P. and McClure, J. E. and
               Steinberger, M.},
@@ -546,6 +560,19 @@ MRREVIEWER = {Robert A. Morris},
 MRREVIEWER = {Harold Hastings},
        DOI = {10.1016/0021-8693(80)90194-5},
        URL = {http://dx.doi.org/10.1016/0021-8693(80)90194-5},
+}
+
+@book {Hartshorne,
+    AUTHOR = {Hartshorne, Robin},
+     TITLE = {Algebraic geometry},
+      NOTE = {Graduate Texts in Mathematics, No. 52},
+ PUBLISHER = {Springer-Verlag, New York-Heidelberg},
+      YEAR = {1977},
+     PAGES = {xvi+496},
+      ISBN = {0-387-90244-9},
+   MRCLASS = {14-01},
+  MRNUMBER = {0463157},
+MRREVIEWER = {Robert Speiser},
 }
 
 @book {Hazewinkel,
@@ -1313,6 +1340,54 @@ MRREVIEWER = {Mark Hovey},
    MRCLASS = {55.40},
   MRNUMBER = {0226634},
 MRREVIEWER = {Larry Smith},
+}
+
+@article {MumfordEquationsI,
+    AUTHOR = {Mumford, D.},
+     TITLE = {On the equations defining abelian varieties. {I}},
+   JOURNAL = {Invent. Math.},
+  FJOURNAL = {Inventiones Mathematicae},
+    VOLUME = {1},
+      YEAR = {1966},
+     PAGES = {287--354},
+      ISSN = {0020-9910},
+   MRCLASS = {14.51},
+  MRNUMBER = {0204427},
+MRREVIEWER = {J. W. S. Cassels},
+       DOI = {10.1007/BF01389737},
+       URL = {http://dx.doi.org/10.1007/BF01389737},
+}
+
+@article {MumfordEquationsII,
+    AUTHOR = {Mumford, D.},
+     TITLE = {On the equations defining abelian varieties. {II}},
+   JOURNAL = {Invent. Math.},
+  FJOURNAL = {Inventiones Mathematicae},
+    VOLUME = {3},
+      YEAR = {1967},
+     PAGES = {75--135},
+      ISSN = {0020-9910},
+   MRCLASS = {14.51},
+  MRNUMBER = {0219541},
+MRREVIEWER = {J. W. S. Cassels},
+       DOI = {10.1007/BF01389741},
+       URL = {http://dx.doi.org/10.1007/BF01389741},
+}
+
+@article {MumfordEquationsIII,
+    AUTHOR = {Mumford, D.},
+     TITLE = {On the equations defining abelian varieties. {III}},
+   JOURNAL = {Invent. Math.},
+  FJOURNAL = {Inventiones Mathematicae},
+    VOLUME = {3},
+      YEAR = {1967},
+     PAGES = {215--244},
+      ISSN = {0020-9910},
+   MRCLASS = {14.51},
+  MRNUMBER = {0219542},
+MRREVIEWER = {J. W. S. Cassels},
+       DOI = {10.1007/BF01425401},
+       URL = {http://dx.doi.org/10.1007/BF01425401},
 }
 
 @article {Nave,
