fix some stray tau vs q confusion

--- a/sigma.tex
+++ b/sigma.tex
@@ -897,7 +897,7 @@ There is a second standard embedding of a complex elliptic curve into projective
     \fill (0.707,0.707) circle (0.12) ++(-0.26,-0.26) node {$q$};
     \path [draw=none, fill=gray, even odd rule, fill opacity = 0.1] (0,0) circle (2) (0,0) circle (1);
 \end{tikzpicture}
-$\rightsquigarrow$
+\quad \quad $\rightsquigarrow$ \quad \quad
 \begin{tikzpicture}[baseline=(current bounding box.center)]
 % http://www.texample.net/tikz/examples/smooth-maps/
     \foreach \x in {90,89,...,-90} { % change 89 to 80 or 45 for speed
@@ -953,16 +953,16 @@ For $N > 1$, this map is an embedding. \qed
 \end{theorem}
 
 \begin{example}
-Let us expand this in the case of $N = 2$.  The four functions involved are
+Let us expand this in the case of $N = 2$.  The four functions involved are labeled $\theta_q^{0,0}$, $\theta_q^{0,1/2}$, $\theta_q^{1/2,0}$, and $\theta_q^{1/2,1/2}$, and we record their zero loci in the following table:
 \begin{center}
 \begin{tabular}{|c||c|}
 \hline
 Function & Zero locus \\
 \hline \hline
-$\theta_q^{0,0}$ & $\Lambda + \frac{\tau + 1}{2}$ \\
-$\theta_q^{0,1/2}$ & $\Lambda + \frac{\tau}{2}$ \\
-$\theta_q^{1/2,0}$ & $\Lambda + \frac{1}{2}$ \\
-$\theta_q^{1/2,1/2}$ & $\Lambda$. \\
+$\theta_q^{0,0}$ & $q^{\Z} \cdot q^{1/2} \cdot i$ \\
+$\theta_q^{0,1/2}$ & $q^{\Z} \cdot q^{1/2}$ \\
+$\theta_q^{1/2,0}$ & $q^{\Z} \cdot i$ \\
+$\theta_q^{1/2,1/2}$ & $q^{\Z}$. \\
 \hline
 \end{tabular}
 \end{center}
@@ -973,16 +973,16 @@ A^2 x_3^2 & = C^2 x_1^2 - B^2 x_2^2,
 \end{align*}
 where
 \begin{align*}
-x_0 & = \theta_\tau^{0, 0}(2z), &
-x_1 & = \theta_\tau^{0, 1/2}(2z), &
-x_2 & = \theta_\tau^{1/2, 0}(2z), &
-x_3 & = \theta_\tau^{1/2, 1/2}(2z)
+x_0 & = \theta_q^{0, 0}(u^2), &
+x_1 & = \theta_q^{0, 1/2}(u^2), &
+x_2 & = \theta_q^{1/2, 0}(u^2), &
+x_3 & = \theta_q^{1/2, 1/2}(u^2)
 \end{align*}
 and
 \begin{align*}
-A & = \theta_\tau^{0, 0}(0) = \sum_n q^{n^2}, &
-B & = \theta_\tau^{0, 1/2}(0) = \sum_n (-1)^n q^{n^2}, &
-C & = \theta_\tau^{1/2, 0}(0) = \sum_n q^{(n + 1/2)^2},
+A & = \theta_q^{0, 0}(0) = \sum_n q^{n^2}, &
+B & = \theta_q^{0, 1/2}(0) = \sum_n (-1)^n q^{n^2}, &
+C & = \theta_q^{1/2, 0}(0) = \sum_n q^{(n + 1/2)^2},
 \end{align*}
 upon which there is the additional ``Jacobi'' relation \[A^4 = B^4 + C^4.\]
 \end{example}
