fix the verso/recto spectral sequences thing

--- a/preamble.tex
+++ b/preamble.tex
@@ -278,3 +278,8 @@
 \makeatletter
 \protected\def\HFp{H\mathbb{F}_p\@ifnextchar_{{}}{}}
 \makeatother
+
+% from hood chatham: place relevant spectral sequences on verso-recto pairs
+
+\usepackage{afterpage}
+\def\afterrectopage#1{\afterpage{\ifodd\thepage #1\else\afterpage{#1}\fi}}
