fix missing macro

--- a/quillen.tex
+++ b/quillen.tex
@@ -769,7 +769,7 @@ where we have expanded out some of the pieces of the total symmetric Chern class
 \end{remark}
 
 \begin{definition}[{\cite[Theorem I.5.1]{AdamsBlueBook}}]
-todo{Should you include Quillen's ``norm'' perspective on these operations (cf.\ between equations 2.2 and 2.3)? You were just almost-but-not-quite talking about isogenies, and you're going to want to talk about norm constructions eventually...}
+\todo{Should you include Quillen's ``norm'' perspective on these operations (cf.\ between equations 2.2 and 2.3)? You were just almost-but-not-quite talking about isogenies, and you're going to want to talk about norm constructions eventually...}
 Take the orientation to be $MU \xrightarrow{\id} MU$, so that we are considering $MU^* MU$ and the Landweber--Novikov operations arising from the Conner--Floyd--Chern classes.  These account for the \emph{stable} operations in $MU$--cohomology, analogous to the Steenrod operations for $H\F_2$.  They satisfy the following properties:
 \begin{itemize}
 \item $s_0$ is the identity.
