note about HI1 elements

--- a/mo.tex
+++ b/mo.tex
@@ -638,6 +638,7 @@ This Hopf algebra is commonly denoted $\mathcal A(1)_*$, and its corresponding s
 
 \begin{example}
 At the other extreme, we can pick the extremely nondegenerate case $X = \S$, where $\InternalAut_1 \G_a$ acts maximally nonfreely on $\Spec \F_2$.  The resulting spectral sequence is pictured through a range in \Cref{HF2ASSFigure}.
+\todo{Name the Hopf invariant elements in terms of the $1$--cocycles reading off the coordinate functions for a generic additive automorphism.}
 \end{example}
 
 \todo{Jon asked: spectral sequences coming from $\pi_*$ of a Tot tower increase Tot degree. ANSS differentials decrease degree: they run against the multiplicative structure in pictures. What's going on with this?  I think this is a duality effect: working with the Steenrod algebra versus its dual.}
