--- a/mo.tex
+++ b/mo.tex
@@ -637,8 +637,8 @@ This Hopf algebra is commonly denoted $\mathcal A(1)_*$, and its corresponding s
 \end{example}
 
 \begin{example}
-At the other extreme, we can pick the extremely nondegenerate case $X = \S$, where $\InternalAut_1 \G_a$ acts maximally nonfreely on $\Spec \F_2$.  The resulting spectral sequence is pictured through a range in \Cref{HF2ASSFigure}.
-\todo{Name the Hopf invariant elements in terms of the $1$--cocycles reading off the coordinate functions for a generic additive automorphism.}
+At the other extreme, we can pick the extremely nondegenerate case $X = \S$, where $\InternalAut_1 \G_a$ acts maximally nonfreely on $\widetilde{\F_2}$.  The resulting spectral sequence is pictured through a range in \Cref{HF2ASSFigure}.  It is worth remarking that some of the stable stems receive identifiable names in this language: for instance, the elements of $H^1(\InternalAut_1(\G_a); \widetilde{\F_2})$ are exactly the $1$--cocycles \[h_j\co \left( f = x + \sum_{j=1}^\infty \xi_j x^{2^j}\right) \mapsto \xi_j.\]  The cocycle $h_j$ transforms in the $\Gm$--character $z \mapsto z^{2^j}$, hence $h_1$ is a name for the lone element in the spectral sequence contributing to $\pi_1 \S$, which we also know to be $\eta$.  In general, the elements $h_j$ selecting the power series coefficients are called the \textit{Hopf invariant $1$ elements}, and their survival of the Adams spectral sequence is directly related to the problem of putting $H$--space structures on spheres.
+\citeme{VFoS problem}
 \end{example}
 
 \todo{Jon asked: spectral sequences coming from $\pi_*$ of a Tot tower increase Tot degree. ANSS differentials decrease degree: they run against the multiplicative structure in pictures. What's going on with this?  I think this is a duality effect: working with the Steenrod algebra versus its dual.}
