minor edits to MotivicScones remark

--- a/mo.tex
+++ b/mo.tex
@@ -637,7 +637,7 @@ This Hopf algebra is commonly denoted $\mathcal A(1)_*$, and its corresponding s
 \end{example}
 
 \begin{example}
-At the other extreme, we can pick the extremely nondegenerate case $X = \S$, where $\InternalAut_1 \G_a$ acts maximally nonfreely on $\widetilde{\F_2}$.  The resulting spectral sequence is pictured through a range in \Cref{HF2ASSFigure}.  It is worth remarking that some of the stable stems receive identifiable names in this language: for instance, the elements of $H^1(\InternalAut_1(\G_a); \widetilde{\F_2})$ are exactly the $1$--cocycles \[h_j\co \left( f = x + \sum_{j=1}^\infty \xi_j x^{2^j}\right) \mapsto \xi_j.\]  The cocycle $h_j$ transforms in the $\Gm$--character $z \mapsto z^{2^j}$, hence $h_1$ is a name for the lone element in the spectral sequence contributing to $\pi_1 \S$, which we also know to be $\eta$.  In general, the elements $h_j$ selecting the power series coefficients are called the \textit{Hopf invariant $1$ elements}, and their survival of the Adams spectral sequence is directly related to the problem of putting $H$--space structures on spheres.
+At the other extreme, we can pick the extremely nondegenerate case $X = \S$, where $\InternalAut_1 \G_a$ acts maximally nonfreely on $\widetilde{\F_2}$.  The resulting spectral sequence is pictured through a range in \Cref{HF2ASSFigure}.  It is worth remarking that some of the stable stems receive identifiable names in this language: for instance, the elements of $H^1_{\mathrm{gp}}(\InternalAut_1(\G_a); \widetilde{\F_2})$ are exactly the $1$--cocycles \[h_j\co \left( f = x + \sum_{j=1}^\infty \xi_j x^{2^j}\right) \mapsto \xi_j.\]  The cocycle $h_j$ transforms in the $\Gm$--character $z \mapsto z^{2^j}$, hence $h_1$ is a name for the lone element in the spectral sequence contributing to $\pi_1 \S$, which we also know to be $\eta$.  In general, the elements $h_j$ selecting the power series coefficients are called the \textit{Hopf invariant $1$ elements}, and their survival or demise in the Adams spectral sequence is directly related to the problem of putting $H$--space structures on spheres.
 \citeme{VFoS problem}
 \end{example}
 
