bernoulli congruences reference

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -440,7 +440,7 @@ The case of the orientation $M\String \to \tmf$ has all of the same trappings, b
     \item You also have to ramp up the algebraic part of the calculation by identifying the analogues of the Mazur moments in $\pi_* L_{K(1)} \tmf$.  These turn out to be normalized Eisenstein series.
 \end{enumerate}
 
-These Bernoulli sequences are \emph{not} the only sequences satisfying these reconstruction properties, but Mike thinks that they may be the only ones with a ``reasonable'' growth rate (as measured in $\R$).  It would also be great if someone could figure this out.  It would also be great if this ``real place'' condition had something to do with a smooth cohomology theory like differential real $K$--theory.
+These Bernoulli sequences are \emph{not} the only sequences satisfying these reconstruction properties, but Mike thinks that they may be the only ones with a ``reasonable'' growth rate (as measured in $\R$).  It would also be great if someone could figure this out.  It would also be great if this ``real place'' condition had something to do with a smooth cohomology theory like differential real $K$--theory.  \texttt{https://arxiv.org/pdf/1409.5314.pdf} has some information about this (and an enumeration of the available solutions).
 
 The transfer map from a dimension $n$ compact Lie group lies in Novikov filtration $n$, which accounts for why the Miller invariant map $S^1 \sm \CP^\infty \to u \to \gl_1 \S \to \Susp^{-1} \Q/\Z \otimes \gl_1 R$ (which is secretly the $S^1$--transfer) consists of torsion classes.  One wonders how the $n$--torus transfer behaves on stable homotopy, e.g., what classes it selects in $\pi_* \gl_1 E_\Gamma$ for $\Gamma$ a height $n$ formal group.  (We might also be interested in the behavior of the lower-height transfers and their values in the Lubin--Tate ring.)
 
