include remark about Ando-Morava

--- a/main.bib
+++ b/main.bib
@@ -112,6 +112,24 @@ MRREVIEWER = {Mark Hovey},
        URL = {http://dx.doi.org/10.1007/s002220100175},
 }
 
+@incollection {AndoMorava,
+    AUTHOR = {Ando, Matthew and Morava, Jack},
+     TITLE = {A renormalized {R}iemann-{R}och formula and the {T}hom
+              isomorphism for the free loop space},
+ BOOKTITLE = {Topology, geometry, and algebra: interactions and new
+              directions ({S}tanford, {CA}, 1999)},
+    SERIES = {Contemp. Math.},
+    VOLUME = {279},
+     PAGES = {11--36},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {2001},
+   MRCLASS = {57R91 (14L05 19L10 55N20 55N34 58J26)},
+  MRNUMBER = {1850739},
+MRREVIEWER = {Neil P. Strickland},
+       DOI = {10.1090/conm/279/04552},
+       URL = {http://dx.doi.org/10.1090/conm/279/04552},
+}
+
 @article {AndoStrickland,
     AUTHOR = {Ando, M. and Strickland, N. P.},
      TITLE = {Weil pairings and {M}orava {$K$}-theory},
